fixed thermal boiler not compiling